feat: add Badge, Checkbox, Pagination, UserAccessTable components and update Foundations
- Add Badge component with stories
- Add Checkbox component with stories
- Add Pagination component with stories
- Add UserAccessTable component with stories
- Update Foundations with ColorNoise stories
- Update semantic tokens
- Add ESLint and Stylelint configuration
- Update Storybook configuration

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -6,6 +6,9 @@
 />
 
 <style>
+  html, body, #storybook-root {
+    font-family: var(--font-family-base) !important;
+  }
   body {
     background-color: var(--semantic-background-base);
   }
